# T-C-AI

./: .gitignore  Cargo.toml  Dockerfile  README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
backend/: Cargo.toml
backend/src/: main.rs
background-script/: Cargo.toml  index.js
background-script/src/: lib.rs
foreground-script/: Cargo.toml  index.js
foreground-script/src/: lib.rs
messages/: Cargo.toml
python-server/: llama_server.py
src/: lib.rs
