[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4" # for building the web server
# Common Uses of Actix-Web:
# Building RESTful APIs.
# Serving static files.
# Handling WebSocket connections.
# Middleware for authentication, logging, etc.
serde = {version = "1.0", features =["derive"]} # For serializing and deserializing json
serde_json = "1.0" # for working with json data
