[package]
name = "foreground-script"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Project dependencies
messages = { path = "../messages"}

# External dependencies
gloo-console = "0.2.3"
gloo-utils = "0.1.5"
wasm-bindgen = "0.2.92"
web-extensions-sys = "0.4.1"
web-sys = { version = "0.3.69", features = ["DomTokenList", "Element"] }