[package]
name = "foreground-script"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Project dependencies
messages = { path = "../messages"}

# External dependencies
gloo-console = "0.2.3"
gloo-utils = "0.1.5"
gloo-net = "0.6.0"

serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"

wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

web-extensions-sys = "0.4.1"
web-sys = { version = "0.3.69", features = ["DomTokenList", "Element"] }